--- a/src/index.css
+++ b/src/index.css
@@ -14,21 +14,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-ul{
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: row;
-}
-li{
-  margin: 10px;
-}
-.active{
-  color: white;
-  text-decoration: underline;
-}
-
-*{
+* {
   list-style: none;
 }
 
@@ -42,9 +28,11 @@ a:hover {
   color: white;
 }
 
-html{
+html {
   width: 100%;
   height: 100%;
+
+  overflow-y: scroll;
 }
 
 body {
@@ -55,6 +43,5 @@ body {
   min-width: 90vw;
   min-height: 100vh;
   background-color: #111;
+  box-sizing: border-box !important;
 }
-
-
