--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,11 @@ a {
   font-weight: 500;
   color: lightgrey;
   text-decoration: inherit;
+  text-decoration: underline 0.15em rgba(255, 255, 255, 0);
+  transition: text-decoration-color 300ms;
 }
 a:hover {
-  text-decoration: underline;
+  text-decoration: underline 0.15em rgb(255, 255, 255, 1);
   color: white;
 }
 
